--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
-spring.application.name=demo2
+spring.application.name=jasper
 
 server.port=8010
+
+spring.redis.host=10.0.0.161
+spring.redis.port=6379
+spring.redis.password=zzz
+
+mybatis:
+type-aliases-package: com.zhouzz.pojo
+mapper-locations: classpath:mapper/*.xml
